; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_win32_time.c__glfwPlatformGetTimerValue.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_win32_time.c__glfwPlatformGetTimerValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@_glfw = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_glfwPlatformGetTimerValue() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @_glfw, i32 0, i32 0, i32 0, i32 0), align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = call i32 @QueryPerformanceCounter(i32* %2)
  %7 = load i32, i32* %2, align 4
  store i32 %7, i32* %1, align 4
  br label %10

8:                                                ; preds = %0
  %9 = call i32 (...) @timeGetTime()
  store i32 %9, i32* %1, align 4
  br label %10

10:                                               ; preds = %8, %5
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @QueryPerformanceCounter(i32*) #1

declare dso_local i32 @timeGetTime(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
